Chore: 환경 세팅